--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 </ul>
             </div>
         </section>
-   asf asggas
+   
         <!-- Section 5. Customers. -->
         <section class="customers section-beta">
             <div class="container">
@@ -221,7 +221,7 @@
                  
                 </ul>
             </div>
-        </section>a fasa  aga sadgsd
+        </section>
     </main>
     <!--Footer-->
     <footer class="footer">
