--- a/index.html
+++ b/index.html
@@ -287,42 +287,42 @@
                     <li class="customers-list-box">
                         <a class="link" href="">
                             <svg class="icon_customers" width="104" height="56">
-                                <use href="./images/icons.svg/icons.svg#"></use>
+                                <use href="./images/icons.svg/icons.svg#icon-logo1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-list-box">
                         <a class="link" href="">
                             <svg class="icon_customers" width="104" height="56">
-                                <use href="./images/icons.svg/icons.svg#"></use>
+                                <use href="./images/icons.svg/icons.svg#icon-logo2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-list-box">
                         <a class="link" href="">
                             <svg class="icon_customers" width="104" height="56">
-                                <use href="./images/icons.svg/icons.svg#"></use>
+                                <use href="./images/icons.svg/icons.svg#icon-logo3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-list-box">
                         <a class="link" href="">
                             <svg class="icon_customers" width="104" height="56">
-                                <use href="./images/icons.svg/icons.svg#"></use>
+                                <use href="./images/icons.svg/icons.svg#icon-logo4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-list-box">
                         <a class="link" href="">
                             <svg class="icon_customers" width="104" height="56">
-                                <use href="./images/icons.svg/icons.svg#"></use>
+                                <use href="./images/icons.svg/icons.svg#icon-logo5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-list-box">
                         <a class="link" href="">
                             <svg class="icon_customers" width="104" height="56">
-                                <use href="./images/icons.svg/icons.svg#i"></use>
+                                <use href="./images/icons.svg/icons.svg#icon-logo6"></use>
                             </svg>
                         </a>
                     </li>
