--- a/portfolio.html
+++ b/portfolio.html
@@ -22,10 +22,10 @@
                 <a class="link-logo link" href="./index.html">Web<span class="header-logo-link">Studio</span></a>
                 <ul class="header-menu list">
                     <li class="list-element-menu">
-                        <a class="header-menu-link link is-active" href="./index.html">Studio</a>
+                        <a class="header-menu-link link " href="./index.html">Studio</a>
                     </li>
                     <li class="list-element-menu">
-                        <a class="header-menu-link link" href="./portfolio.html">Portfolio</a>
+                        <a class="header-menu-link link is-active" href="./portfolio.html">Portfolio</a>
                     </li>
                     <li class="list-element-menu">
                         <a class="header-menu-link link" href="">Contacts</a>
