--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <li class="advantage-box">
                         <div class="container-icon-advantage">
                             <svg class="icon_advantage" width="64" height="64">
-                                <use href="/images/icons.svg/icons.svg#icon-antenna1"></use>
+                                <use href=""></use>
                             </svg>
                         </div>
                         <h3 class="third-header">Strategy</h3>
@@ -73,7 +73,7 @@
                     <li class="advantage-box">
                         <div class="container-icon-advantage">
                             <svg class="icon_advantage" width="64" height="64">
-                                <use href="/images/icons.svg/icons.svg#icon-clock1"></use>
+                                <use href="/images/spryte.svg#icon-clock1"></use>
                             </svg>
                         </div>
                         <h3 class="third-header">Punctuality</h3>
@@ -85,7 +85,7 @@
                     <li class="advantage-box">
                         <div class="container-icon-advantage">
                             <svg class="icon_advantage" width="64" height="64">
-                                <use href="/images/icons.svg/icons.svg#icon-diagram1"></use>
+                                <use href="/images/spryte.svg#icon-diagram1"></use>
                             </svg>
                         </div>
                         <h3 class="third-header">Diligence</h3>
@@ -97,7 +97,7 @@
                     <li class="advantage-box">
                         <div class="container-icon-advantage">
                             <svg class="icon_advantage" width="64" height="64">
-                                <use href="/images/icons.svg/icons.svg#icon-astronaut1"></use>
+                                <use href="/images/spryte.svg#icon-astronaut1"></use>
                             </svg>
                         </div>
                         <h3 class="third-header">Technologies</h3>
@@ -138,28 +138,28 @@
                                 <li class="team-icon-box">
                                     <a class="link" href="https://www.instagram.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg/icons.svg#icon-instagram2"></use>
+                                            <use href="./images/spryte.svg#icon-instagram2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://twitter.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg/icons.svg#icon-twitter2"></use>
+                                            <use href="/images/spryte.svg#icon-twitter2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://facebook.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg/icons.svg#icon-facebook2"></use>
+                                            <use href="/images/spryte.svg#icon-facebook2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://www.linkedin.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg/icons.svg#icon-linkedin2"></use>
+                                            <use href="/images/spryte.svg#icon-linkedin2"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -175,28 +175,28 @@
                                 <li class="team-icon-box">
                                     <a class="link" href="https://www.instagram.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg/icons.svg#icon-instagram2"></use>
+                                            <use href="./images/spryte.svg#icon-instagram2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://twitter.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg/icons.svg#icon-twitter2"></use>
+                                            <use href="/images/spryte.svg#icon-twitter2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://facebook.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg/icons.svg#icon-facebook2"></use>
+                                            <use href="/images/spryte.svg#icon-facebook2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://www.linkedin.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg/icons.svg#icon-linkedin2"></use>
+                                            <use href="/images/spryte.svg#icon-linkedin2"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -212,28 +212,28 @@
                                 <li class="team-icon-box">
                                     <a class="link" href="https://www.instagram.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="../images/icons.svg/icons.svg#icon-instagram2"></use>
+                                            <use href="../images/spryte.svg#icon-instagram2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://twitter.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg/icons.svg#icon-twitter2"></use>
+                                            <use href="/images/spryte.svg#icon-twitter2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://facebook.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg/icons.svg#icon-facebook2"></use>
+                                            <use href="/images/spryte.svg#icon-facebook2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://www.linkedin.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg/icons.svg#icon-linkedin2"></use>
+                                            <use href="/images/spryte.svg#icon-linkedin2"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -249,28 +249,28 @@
                                 <li class="team-icon-box">
                                     <a class="link" href="https://www.instagram.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg/icons.svg#icon-instagram2"></use>
+                                            <use href="./images/spryte.svg#icon-instagram2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://twitter.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg/icons.svg#icon-twitter2"></use>
+                                            <use href="/images/spryte.svg#icon-twitter2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://facebook.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg/icons.svg#icon-facebook2"></use>
+                                            <use href="/images/spryte.svg#icon-facebook2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://www.linkedin.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg/icons.svg#icon-linkedin2"></use>
+                                            <use href="/images/spryte.svg#icon-linkedin2"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -287,42 +287,42 @@
                     <li class="customers-list-box">
                         <a class="link" href="">
                             <svg class="icon_customers" width="104" height="56">
-                                <use href="./images/icons.svg/icons.svg#icon-logo1"></use>
+                                <use href="/images/spryte.svg#icon-logo1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-list-box">
                         <a class="link" href="">
                             <svg class="icon_customers" width="104" height="56">
-                                <use href="./images/icons.svg/icons.svg#icon-logo2"></use>
+                                <use href="/images/spryte.svg#icon-logo2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-list-box">
                         <a class="link" href="">
                             <svg class="icon_customers" width="104" height="56">
-                                <use href="./images/icons.svg/icons.svg#icon-logo3"></use>
+                                <use href="/images/spryte.svg#icon-logo3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-list-box">
                         <a class="link" href="">
                             <svg class="icon_customers" width="104" height="56">
-                                <use href="./images/icons.svg/icons.svg#icon-logo4"></use>
+                                <use href="/images/spryte.svg#icon-logo4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-list-box">
                         <a class="link" href="">
                             <svg class="icon_customers" width="104" height="56">
-                                <use href="./images/icons.svg/icons.svg#icon-logo5"></use>
+                                <use href="/images/spryte.svg#icon-logo5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-list-box">
                         <a class="link" href="">
                             <svg class="icon_customers" width="104" height="56">
-                                <use href="./images/icons.svg/icons.svg#icon-logo6"></use>
+                                <use href="/images/spryte.svg#icon-logo6"></use>
                             </svg>
                         </a>
                     </li>
@@ -345,28 +345,28 @@
                     <li class="footer-social-link-container">
                         <a class="link" href="https://www.instagram.com/" target="_blank">
                             <svg class="icon-footer" width="24" height="24">
-                                <use href="/images/icons.svg/icons.svg#icon-instagram2"></use>
+                                <use href="/images/spryte.svg#icon-instagram2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-social-link-container">
                         <a class="link" href="https://twitter.com/" target="_blank">
                             <svg class="icon-footer" width="24" height="24">
-                                <use href="/images/icons.svg/icons.svg#icon-twitter2"></use>
+                                <use href="/images/spryte.svg#icon-twitter2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-social-link-container">
                         <a class="link" href="https://facebook.com/" target="_blank">
                             <svg class="icon-footer" width="24" height="24">
-                                <use href="/images/icons.svg/icons.svg#icon-facebook2"></use>
+                                <use href="/images/spryte.svg#icon-facebook2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-social-link-container">
                         <a class="link" href="https://www.linkedin.com/" target="_blank">
                             <svg class="icon-footer" width="24" height="24">
-                                <use href="/images/icons.svg/icons.svg#icon-linkedin2"></use>
+                                <use href="/images/spryte.svg#icon-linkedin2"></use>
                             </svg>
                         </a>
                     </li>
@@ -379,7 +379,7 @@
         <div class="callback-form">
             <button class="btn_modal" type="button" data-modal-close>
                 <svg class="icon-btn-close" width="8" height="8">
-                    <use href="./images/icons.svg#icon-close"></use>
+                    <use href="/images/spryte.svg#icon-close"></use>
                 </svg>
             </button>
         </div>
