--- a/portfolio.html
+++ b/portfolio.html
@@ -233,28 +233,28 @@
                     <li class="footer-social-link-container">
                         <a class="link" href="https://www.instagram.com/" target="_blank">
                             <svg class="icon-footer" width="24" height="24">
-                                <use href="/images/spryte.svg#icon-instagram2"></use>
+                                <use href="./images/spryte.svg#icon-instagram2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-social-link-container">
                         <a class="link" href="https://twitter.com/" target="_blank">
                             <svg class="icon-footer" width="24" height="24">
-                                <use href="/images/spryte.svg#icon-twitter2"></use>
+                                <use href="./images/spryte.svg#icon-twitter2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-social-link-container">
                         <a class="link" href="https://facebook.com/" target="_blank">
                             <svg class="icon-footer" width="24" height="24">
-                                <use href="/images/spryte.svg#icon-facebook2"></use>
+                                <use href="./images/spryte.svg#icon-facebook2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-social-link-container">
                         <a class="link" href="https://www.linkedin.com/" target="_blank">
                             <svg class="icon-footer" width="24" height="24">
-                                <use href="/images/spryte.svg#icon-linkedin2"></use>
+                                <use href="./images/spryte.svg#icon-linkedin2"></use>
                             </svg>
                         </a>
                     </li>
