--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <li class="advantage-box">
                         <div class="container-icon-advantage">
                             <svg class="icon_advantage" width="64" height="64">
-                                <use href="./images/icons.svgantenna1"></use>
+                                <use href="./images/icons.svg#antenna1"></use>
                             </svg>
                         </div>
                         <h3 class="third-header">Strategy</h3>
@@ -74,7 +74,7 @@
                     <li class="advantage-box">
                         <div class="container-icon-advantage">
                             <svg class="icon_advantage" width="64" height="64">
-                                <use href="./images/icons.svg#icon-clock1"></use>
+                                <use href="./images/icons.svg#clock1"></use>
                             </svg>
                         </div>
                         <h3 class="third-header">Punctuality</h3>
@@ -86,7 +86,7 @@
                     <li class="advantage-box">
                         <div class="container-icon-advantage">
                             <svg class="icon_advantage" width="64" height="64">
-                                <use href="./images/icons.svg#icon-diagram1"></use>
+                                <use href="./images/icons.svg#diagram1"></use>
                             </svg>
                         </div>
                         <h3 class="third-header">Diligence</h3>
@@ -98,7 +98,7 @@
                     <li class="advantage-box">
                         <div class="container-icon-advantage">
                             <svg class="icon_advantage" width="64" height="64">
-                                <use href="./images/icons.svg#icon-astronaut1"></use>
+                                <use href="./images/icons.svg#astronaut1"></use>
                             </svg>
                         </div>
                         <h3 class="third-header">Technologies</h3>
@@ -139,28 +139,28 @@
                                 <li class="team-icon-box">
                                     <a class="link" href="https://www.instagram.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-instagram2"></use>
+                                            <use href="./images/icons.svg#instagram2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://twitter.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-twitter2"></use>
+                                            <use href="./images/icons.svg#twitter2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://facebook.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-facebook2"></use>
+                                            <use href="./images/icons.svg#facebook2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://www.linkedin.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-linkedin2"></use>
+                                            <use href="./images/icons.svg#linkedin2"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -323,7 +323,7 @@
                     <li class="customers-list-box">
                         <a class="link" href="">
                             <svg class="icon_customers" width="104" height="56">
-                                <use href="./images/icons.svg#logo6"></use>
+                                <use href="./images/icons.svgLogo6"></use>
                             </svg>
                         </a>
                     </li>
@@ -346,7 +346,7 @@
                     <li class="footer-social-link-container">
                         <a class="link" href="https://www.instagram.com/" target="_blank">
                             <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#instagram2"></use>
+                                <use href="./images/icons.svg#instagram"></use>
                             </svg>
                         </a>
                     </li>
