--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <li class="advantage-box">
                         <div class="container-icon-advantage">
                             <svg class="icon_advantage" width="64" height="64">
-                                <use href="./images/icons.svg#diagram1"></use>
+                                <use href="./images/icons.svg#diagram"></use>
                             </svg>
                         </div>
                         <h3 class="third-header">Diligence</h3>
@@ -139,28 +139,28 @@
                                 <li class="team-icon-box">
                                     <a class="link" href="https://www.instagram.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg#instagram2"></use>
+                                            <use href="./images/icons.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://twitter.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg#twitter2"></use>
+                                            <use href="./images/icons.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://facebook.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg#facebook2"></use>
+                                            <use href="./images/icons.svg#facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://www.linkedin.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg#linkedin2"></use>
+                                            <use href="./images/icons.svg#linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -176,28 +176,28 @@
                                 <li class="team-icon-box">
                                     <a class="link" href="https://www.instagram.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-instagram2"></use>
+                                            <use href="./images/icons.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://twitter.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-twitter2"></use>
+                                            <use href="./images/icons.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://facebook.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-facebook2"></use>
+                                            <use href="./images/icons.svg#facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://www.linkedin.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-linkedin2"></use>
+                                            <use href="./images/icons.svg#linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -213,28 +213,28 @@
                                 <li class="team-icon-box">
                                     <a class="link" href="https://www.instagram.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-instagram2"></use>
+                                            <use href="./images/icons.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://twitter.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-twitter2"></use>
+                                            <use href="./images/icons.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://facebook.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-facebook2"></use>
+                                            <use href="./images/icons.svg#facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://www.linkedin.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-linkedin2"></use>
+                                            <use href="./images/icons.svg#linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -250,28 +250,28 @@
                                 <li class="team-icon-box">
                                     <a class="link" href="https://www.instagram.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-instagram2"></use>
+                                            <use href="./images/icons.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://twitter.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-twitter2"></use>
+                                            <use href="./images/icons.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://facebook.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-facebook2"></use>
+                                            <use href="./images/icons.svg#facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-icon-box">
                                     <a class="link" href="https://www.linkedin.com/" target="_blank">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-linkedin2"></use>
+                                            <use href="./images/icons.svg#linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -288,42 +288,42 @@
                     <li class="customers-list-box">
                         <a class="link" href="">
                             <svg class="icon_customers" width="104" height="56">
-                                <use href="./images/icons.svg#icon-logo1"></use>
+                                <use href="./images/icons.svg#logo1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-list-box">
                         <a class="link" href="">
                             <svg class="icon_customers" width="104" height="56">
-                                <use href="./images/icons.svg#icon-logo2"></use>
+                                <use href="./images/icons.svg#logo2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-list-box">
                         <a class="link" href="">
                             <svg class="icon_customers" width="104" height="56">
-                                <use href="./images/icons.svg#icon-logo3"></use>
+                                <use href="./images/icons.svg#logo3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-list-box">
                         <a class="link" href="">
                             <svg class="icon_customers" width="104" height="56">
-                                <use href="./images/icons.svg#icon-logo4"></use>
+                                <use href="./images/icons.svg#logo4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-list-box">
                         <a class="link" href="">
                             <svg class="icon_customers" width="104" height="56">
-                                <use href="./images/icons.svg#icon-logo5"></use>
+                                <use href="./images/icons.svg#logo5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-list-box">
                         <a class="link" href="">
                             <svg class="icon_customers" width="104" height="56">
-                                <use href="./images/icons.svgLogo6"></use>
+                                <use href="./images/icons.svglogo6"></use>
                             </svg>
                         </a>
                     </li>
@@ -353,21 +353,21 @@
                     <li class="footer-social-link-container">
                         <a class="link" href="https://twitter.com/" target="_blank">
                             <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#twitter2"></use>
+                                <use href="./images/icons.svg#twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-social-link-container">
                         <a class="link" href="https://facebook.com/" target="_blank">
                             <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#facebook2"></use>
+                                <use href="./images/icons.svg#facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-social-link-container">
                         <a class="link" href="https://www.linkedin.com/" target="_blank">
                             <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#linkedin2"></use>
+                                <use href="./images/icons.svg#linkedin"></use>
                             </svg>
                         </a>
                     </li>
