--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     <li class="customers-list-box">
                         <a class="link" href="">
                             <svg class="icon_customers" width="104" height="56">
-                                <use href="./images/icons.svglogo6"></use>
+                                <use href="./images/icons.svg#logo6"></use>
                             </svg>
                         </a>
                     </li>
