--- a/portfolio.html
+++ b/portfolio.html
@@ -240,14 +240,14 @@
                     <li class="footer-social-link-container">
                         <a class="link" href="https://twitter.com/" target="_blank">
                             <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg/twitter"></use>
+                                <use href="./images/icons.svg#twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-social-link-container">
                         <a class="link" href="https://facebook.com/" target="_blank">
                             <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg/facebook"></use>
+                                <use href="./images/icons.svg#facebook"></use>
                             </svg>
                         </a>
                     </li>
