--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         <div class="callback-form">
             <button class="btn_modal" type="button" data-modal-close>
                 <svg class="icon-btn-close" width="8" height="8">
-                    <use href="./images/icons.svg#icon-close"></use>
+                    <use href="./images/icons.svg#close"></use>
                 </svg>
             </button>
         </div>
